updating blast algorithm section

--- a/Paper/draft.tex
+++ b/Paper/draft.tex
@@ -27,8 +27,8 @@ Astana, Kazakhstan \\
 %
 \input Sections/0abstract
 \input Sections/1Introduction
-\input Sections/Background_and_ReatedWork
-\input Sections/BlastAlgorithm
+\input Sections/2ReatedWork
+\input Sections/3BlastAlgorithm
 \input Sections/ProposedArchitecture
 \input Sections/ReslutsAndDiscussion
 \input Sections/ConclusionAndFutureWork
