--- a/Paper/reference.bib
+++ b/Paper/reference.bib
@@ -9,6 +9,23 @@
   Year                     = {2007}
 }
 
+@Article{Stephen1990,
+  Title                    = {Basic local alignment search tool},
+  Author                   = {Stephen F. Altschul and Warren Gish and Webb Miller and Eugene W. Myers and David J. Lipman},
+  Journal                  = {Journal of Molecular Biology},
+  Year                     = {1990},
+  Number                   = {3},
+  Pages                    = {403 - 410},
+  Volume                   = {215},
+
+  Abstract                 = {A new approach to rapid sequence comparison, basic local alignment search tool (BLAST), directly approximates alignments that optimize a measure of local similarity, the maximal segment pair (MSP) score. Recent mathematical results on the stochastic properties of MSP scores allow an analysis of the performance of this method as well as the statistical significance of alignments it generates. The basic algorithm is simple and robust; it can be implemented in a number of ways and applied in a variety of contexts including straight-forward DNA and protein sequence database searches, motif searches, gene identification searches, and in the analysis of multiple regions of similarity in long DNA sequences. In addition to its flexibility and tractability to mathematical analysis, BLAST is an order of magnitude faster than existing sequence comparison tools of comparable sensitivity.},
+  Doi                      = {https://doi.org/10.1016/S0022-2836(05)80360-2},
+  ISSN                     = {0022-2836},
+  Owner                    = {vipin},
+  Timestamp                = {2019.02.04},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0022283605803602}
+}
+
 @Electronic{aws2018,
   Title                    = {AWS EC2 FPGA Hardware and Software Development Kit},
   Author                   = {Amazon},
