Table and one idea for conclusion

--- a/Paper/Sections/ConclusionAndFutureWork.tex
+++ b/Paper/Sections/ConclusionAndFutureWork.tex
@@ -4,5 +4,5 @@
 
  - query length is limited by 512 bits
  - expansion waits for hit, hit waits for expansions expansions are not parallel
-
+- compare query with 512bit loaded database piece, and if there is an exact match no need do expansion and HSP is 1055
 In paper \cite{vipin2019}
