--- a/Paper/Sections/1Introduction.tex
+++ b/Paper/Sections/1Introduction.tex
@@ -5,7 +5,7 @@ Biological sequence alignment algorithms are widely used in Bioinformatics and C
 The algorithm works by identifying the degree of similarity between a newly discovered biological sequence with already known sequences~\cite{kasap2008design}.
 These algorithms can lead to early disease diagnosis, where the biological information of a newly discovered infectant (virus or bacteria) DNA sequence can be obtained by matching it with the most similar disease genes in the database \cite{guo2012systolic}. 
 However, sequence alignment algorithms are highly compute intensive~\cite{datta2009}. 
-This calls for powerful servers for the running the software tools and will be beyond the capabilities of small hospitals and research centres.
+This calls for powerful servers for running the software tools and will be beyond the capabilities of small hospitals and research centres.
 Even on high performance computers, often the time required by pure software implementations can vary from several minutes to hours~\cite{masato2016}.  
 
 In recent years, Field Programmable Gate Arrays~(FPGAs) have been proposed as a platform for accelerating bioinformatic applications~\cite{kasap2008design}. 
