--- a/Paper/draft.tex
+++ b/Paper/draft.tex
@@ -6,6 +6,7 @@
 %
 \usepackage{graphicx}
 \usepackage{todonotes}
+\usepackage{subfigure}
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
