NCBI reference added

--- a/Paper/reference.bib
+++ b/Paper/reference.bib
@@ -26,13 +26,12 @@
 }
 
 @Electronic{aws2018,
-  Title                    = {AWS EC2 FPGA Hardware and Software Development Kit},
-  Author                   = {Amazon},
-  Url                      = {https://github.com/aws/aws-fpga},
-  Year                     = {2018},
-
-  Owner                    = {vipin},
-  Timestamp                = {2019.02.04}
+  author    = {Amazon},
+  year      = {2018},
+  title     = {{AWS EC2 FPGA Hardware and Software Development Kit}},
+  url       = {https://github.com/aws/aws-fpga},
+  owner     = {vipin},
+  timestamp = {2019.02.04},
 }
 
 @Article{buhler2007mercury,
@@ -195,6 +194,12 @@
   organization = {Xilinx Inc},
   month        = mar,
   year         = {2011},
+}
+
+@Electronic{ncbiBlast,
+  author = {NCBI},
+  title  = {{Basic Local Alignment Search Tool}},
+  url    = {https://blast.ncbi.nlm.nih.gov/Blast.cgi},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
