CHanges on ref, intro and related works

--- a/Paper/Sections/2ReatedWork.tex
+++ b/Paper/Sections/2ReatedWork.tex
@@ -15,4 +15,6 @@ In order to solve the timing isuse, the architecture Multiengines BLASTn \cite{s
 
 There is another method based on systolic array that does not construct tables. Needleman-Wunsch algorithm \cite{gonnet1992exhaustive} and dynamic programming algorithm that apply systolic array was implemented on SPLASH2 by D. Hoang et. al. \cite{hoang1993searching}. Another algorithm that uses systolic array called Smith Waterman matching algorithm was implemented by S. Guccione et. al., also at Virginia Tech and Nanyang Techological University \cite{yu2003smith}. 
 
+Most of the above mentioned architectures are not available as an open source project. However, \cite{guo2012open} is available as an open source architecture, which makes it easier to comprehend the implementation details thoroughly. In \cite{guo2012open}, the author presents a systolic array-based FPGA parallel architecture for BLAST algorithm. In the provided architecture, there is so called the Multiple Hits Detection Module, which can find more than one hit per clock cycle. Thus, it makes this architecture faster than above-mentioned WPRBS-based architectures. The speed advantage of this architecture is obtained by merging two adjacent hits into one, and speed up the extension step \cite{guo2012open}. In \cite{guo2012open}, the author states that his proposed architecture manages resource utilization better than Tree-BLAST \cite{herbordt2006single}, performs scanning faster than Mercury BLASTn \cite{buhler2007mercury}, and deals with long sequences more effectively than Mercury BLASTp \cite{harris2007banded}. However, the architecture focuses only on the first two steps of BLAST algorithm: finding the hit and ungapped expansion. In order to detect multiple hits and perform merging two adjacent hits, \cite{guo2012open} added First In First Out (FIFO) buffers and Multiple Hits Detection Module, which resulted in an increase of the resource utilization \cite{guo2012open}.
+
 
