References were updated

--- a/Paper/reference.bib
+++ b/Paper/reference.bib
@@ -2,7 +2,7 @@
 
 
 @Article{cug2007,
-  Title                    = {Accelerating NCBI BLAST},
+  Title                    = {Accelerating {NCBI BLAST}},
   Author                   = {Abelsson, Henrik and Sandberg, Goran and Mohl, Stefan},
   Journal                  = {Cray User Group},
   Year                     = {2007}
@@ -35,14 +35,14 @@
 }
 
 @Article{buhler2007mercury,
-  Title                    = {Mercury BLASTN: Faster DNA sequence comparison using a streaming hardware architecture},
+  Title                    = {{Mercury BLASTN: Faster DNA sequence comparison using a streaming hardware architecture}},
   Author                   = {Buhler, Jeremy D and Lancaster, Joseph M and Jacob, Arpith C and Chamberlain, Roger D and others},
   Journal                  = {Proc. of Reconfigurable Systems Summer Institute},
   Year                     = {2007}
 }
 
 @InProceedings{datta2009,
-  Title                    = {RC-BLASTn: Implementation and evaluation of the BLASTn scan function},
+  Title                    = {{RC-BLASTn: Implementation and evaluation of the BLASTn scan function}},
   Author                   = {Datta, Siddhartha and Beeraka, Parag and Sass, Ron},
   Booktitle                = {Field Programmable Custom Computing Machines, 2009. FCCM'09. 17th IEEE Symposium on},
   Year                     = {2009},
@@ -63,7 +63,7 @@
 }
 
 @Article{guo2012systolic,
-  Title                    = {A systolic array-based FPGA parallel architecture for the BLAST algorithm},
+  Title                    = {{A systolic array-based FPGA parallel architecture for the BLAST algorithm}},
   Author                   = {Guo, Xinyu and Wang, Hong and Devabhaktuni, Vijay},
   Journal                  = {ISRN bioinformatics},
   Year                     = {2012},
@@ -73,45 +73,45 @@
 }
 
 @InProceedings{harris2007banded,
-  Title                    = {A banded Smith-Waterman FPGA accelerator for Mercury BLASTP},
+  Title                    = {{A banded Smith-Waterman FPGA accelerator for Mercury BLASTP}},
   Author                   = {Harris, Brandon and Jacob, Arpith C and Lancaster, Joseph M and Buhler, Jeremy and Chamberlain, Roger D},
-  Booktitle                = {Field Programmable Logic and Applications, 2007. FPL 2007. International Conference on},
+  Booktitle                = {{Field Programmable Logic and Applications, 2007. FPL 2007. International Conference on}},
   Year                     = {2007},
-  Organization             = {IEEE},
+  Organization             = {{IEEE}},
   Pages                    = {765--769}
 }
 
 @InProceedings{herbordt2006single,
-  Title                    = {Single pass, BLAST-like, approximate string matching on FPGAs},
+  Title                    = {{Single pass, BLAST-like, approximate string matching on FPGAs}},
   Author                   = {Herbordt, Martin C and Model, Josh and Gu, Yongfeng and Sukhwani, Bharat and VanCourt, Tom},
-  Booktitle                = {Field-Programmable Custom Computing Machines, 2006. FCCM'06. 14th Annual IEEE Symposium on},
+  Booktitle                = {{Field-Programmable Custom Computing Machines, 2006. FCCM'06. 14th Annual IEEE Symposium on}},
   Year                     = {2006},
-  Organization             = {IEEE},
+  Organization             = {{IEEE}},
   Pages                    = {217--226}
 }
 
 @InProceedings{hoang1993searching,
-  Title                    = {Searching genetic databases on Splash 2},
+  Title                    = {Searching genetic databases on {S}plash 2},
   Author                   = {Hoang, Dzung T},
-  Booktitle                = {FPGAs for Custom Computing Machines, 1993. Proceedings. IEEE Workshop on},
+  Booktitle                = {{FPGAs for Custom Computing Machines, 1993. Proceedings. IEEE Workshop on}},
   Year                     = {1993},
-  Organization             = {IEEE},
+  Organization             = {{IEEE}},
   Pages                    = {185--191}
 }
 
 @Article{kasap2008design,
-  Title                    = {Design and Implementation of an FPGA-based Core for Gapped BLAST Sequence Alignment with the Two-Hit Method.},
+  Title                    = {{Design and Implementation of an FPGA-based Core for Gapped BLAST Sequence Alignment with the Two-Hit Method.}},
   Author                   = {Kasap, Server and Benkrid, Khaled and Liu, Ying},
-  Journal                  = {Engineering Letters},
+  Journal                  = {{Engineering Letters}},
   Year                     = {2008},
   Number                   = {3},
   Volume                   = {16}
 }
 
 @Article{lavenier2007reconfigurable,
-  Title                    = {A reconfigurable index FLASH memory tailored to seed-based genomic sequence comparison algorithms},
+  Title                    = {{A reconfigurable index FLASH memory tailored to seed-based genomic sequence comparison algorithms}},
   Author                   = {Lavenier, Dominique and Georges, Gilles and Liu, Xinchun},
-  Journal                  = {The Journal of VLSI Signal Processing Systems for Signal, Image, and Video Technology},
+  Journal                  = {{The Journal of VLSI Signal Processing Systems for Signal, Image, and Video Technology}},
   Year                     = {2007},
   Number                   = {3},
   Pages                    = {255--269},
@@ -121,57 +121,57 @@
 }
 
 @MastersThesis{mohd2013,
-  Title                    = {Design and Implementation of FPGA-based DNA Sequence Alignmnet Accelerator},
+  Title                    = {{Design and Implementation of FPGA-based DNA Sequence Alignmnet Accelerator}},
   Author                   = {Mohd, Fikri Bin Che Husin},
-  School                   = {Universiti Tun Hussein Onn Malaysia},
+  School                   = {{Universiti Tun Hussein Onn Malaysia}},
   Year                     = {2013}
 }
 
 @InProceedings{oliver2005hyper,
   Title                    = {Hyper customized processors for bio-sequence database scanning on {FPGAs}},
   Author                   = {Oliver, Tim and Schmidt, Bertil and Maskell, Douglas},
-  Booktitle                = {Proceedings of the {ACM/SIGDA} international symposium on Field-programmable gate arrays},
+  Booktitle                = {{Proceedings of the {ACM/SIGDA} international symposium on Field-programmable gate arrays}},
   Year                     = {2005},
-  Organization             = {ACM},
+  Organization             = {{ACM}},
   Pages                    = {229--237}
 }
 
 @InProceedings{sarkar2010hardware,
-  Title                    = {Hardware accelerators for biocomputing: A survey},
+  Title                    = {Hardware accelerators for biocomputing: {A} survey},
   Author                   = {Sarkar, Souradip and Majumder, Turbo and Kalyanaraman, Ananth and Pande, Partha Pratim},
-  Booktitle                = {Proceedings of IEEE International Symposium on Circuits and Systems (ISCAS)},
+  Booktitle                = {{Proceedings of IEEE International Symposium on Circuits and Systems (ISCAS)}},
   Year                     = {2010},
-  Organization             = {IEEE},
+  Organization             = {{IEEE}},
   Pages                    = {3789--3792}
 }
 
 @InProceedings{sotiriades2007design,
-  Title                    = {Design space exploration for the BLAST algorithm implementation},
+  Title                    = {{Design space exploration for the BLAST algorithm implementation}},
   Author                   = {Sotiriades, Euripides and Dollas, Apostolos},
-  Booktitle                = {Field-Programmable Custom Computing Machines, 2007. FCCM 2007. 15th Annual IEEE Symposium on},
+  Booktitle                = {{Field-Programmable Custom Computing Machines, 2007. FCCM 2007. 15th Annual IEEE Symposium on}},
   Year                     = {2007},
-  Organization             = {IEEE},
+  Organization             = {{IEEE}},
   Pages                    = {323--326}
 }
 
 @Article{wien2011blastp,
-  Title                    = {Massively parallel FPGA-based implementation of BLASTp with the two-hit method},
+  Title                    = {{Massively parallel FPGA-based implementation of BLASTp with the two-hit method}},
   Author                   = {Wienbrandt, Lars and Baumgart, Stefan and Bissel, Jost and Schatz, Florian and Schimmler, Manfred},
-  Journal                  = {ELSEVIER},
+  Journal                  = {{ELSEVIER}},
   Year                     = {2011}
 }
 
 @Article{masato2016,
-  Title                    = {Accelerating BLAST Computation on an FPGA-enhanced PC Cluster},
+  Title                    = {{Accelerating BLAST Computation on an FPGA-enhanced PC Cluster}},
   Author                   = {Yoshimi, Masato and Wu, Celimuge and Yoshinaga, Tsutomu},
-  Journal                  = {IEEE},
+  Journal                  = {{IEEE}},
   Year                     = {2016}
 }
 
 @InProceedings{yu2003smith,
   Title                    = {A Smith-Waterman systolic cell},
   Author                   = {Yu, Chi Wai and Kwong, KH and Lee, Kin-Hong and Leong, Philip Heng Wai},
-  Booktitle                = {International Conference on Field Programmable Logic and Applications},
+  Booktitle                = {{International Conference on Field Programmable Logic and Applications}},
   Year                     = {2003},
   Organization             = {Springer},
   Pages                    = {375--384}
@@ -179,8 +179,8 @@
 
 @InProceedings{Vipin2014,
   author    = {K. Vipin and S. A. Fahmy},
-  title     = {DyRACT: A partial reconfiguration enabled accelerator and test platform},
-  booktitle = {2014 24th International Conference on Field Programmable Logic and Applications (FPL)},
+  title     = {{DyRACT: A partial reconfiguration enabled accelerator and test platform}},
+  booktitle = {{2014 24th International Conference on Field Programmable Logic and Applications (FPL)}},
   year      = {2014},
   pages     = {1-7},
   month     = {Sep.},
@@ -190,37 +190,33 @@
 }
 
 @Manual{mig2018,
-  title        = {7 Series FPGAs Memory Interface Solutions},
-  organization = {Xilinx Inc},
+  title        = {{7 Series FPGAs Memory Interface Solutions}},
+  organization = {{Xilinx Inc}},
   month        = mar,
   year         = {2011},
 }
 
 @MastersThesis{guo2012open,
   author = {Guo, Xinyu},
-  title  = {Design of a systolic array-based FPGA parallel architecture for the BLAST algorithm and its implementation},
-  school = {The University of Toledo},
+  title  = {{Design of a systolic array-based FPGA parallel architecture for the BLAST algorithm and its implementation}},
+  school = {{The University of Toledo}},
   year   = {2012},
 }
 @Electronic{ncbiBlast,
-  author = {NCBI},
+  author = {{NCBI}},
   title  = {{Basic Local Alignment Search Tool}},
   url    = {https://blast.ncbi.nlm.nih.gov/Blast.cgi},
 }
 
 @article{WIENBRANDT20111967,
-title = "Massively parallel FPGA-based implementation of BLASTp with the two-hit method",
-journal = "Procedia Computer Science",
-volume = "4",
-pages = "1967 - 1976",
-year = "2011",
-note = "Proceedings of the International Conference on Computational Science, ICCS 2011",
-issn = "1877-0509",
-doi = "https://doi.org/10.1016/j.procs.2011.04.215",
-url = "http://www.sciencedirect.com/science/article/pii/S1877050911002730",
-author = "Lars Wienbrandt and Stefan Baumgart and Jost Bissel and Florian Schatz and Manfred Schimmler",
-keywords = "BLASTp, FPGA, sequence alignment, protein database search, Swiss-Prot",
-abstract = "Protein database search requests are generally being performed using the BLASTp algorithm, introduced by NCBI [1]. Since it is computationally intensive, it becomes more and more ine_ective with today's growth of sequence database sizes. The needs for an e_cient parallel implementation arise. In this paper, we focus on a massive parallelization using the FPGA-based hardware architecture RIVYERA [2]. The aim is to reach speedups in orders of magnitude with a flexible implementation while saving energy costs compared to PC-based database search. We keep our implementation close to the structure published by Kasap et al. [3], [4] and include ideas from Sotiriades et al. [5] such that all parts of the algorithm are organized in components of a long pipeline. We also use the idea of the two-hit method [6] to keep the computational e_ort small. Besides the related work, we perform the very last step of the algorithm to produce a gapped alignment with the Needleman-Wunsch algorithm in software, only with the option of hardware processing after reconfiguration. This saves FPGA-resources and allows an even higher degree of parallelism."
+author        = {Lars Wienbrandt and Stefan Baumgart and Jost Bissel and Florian Schatz and Manfred Schimmler},
+  title         = {Massively parallel {FPGA}-based implementation of {BLASTp} with the two-hit method},
+  journal       = {Procedia Computer Science},
+  year          = {2011},
+  volume        = {4},
+  pages         = {1967--1976},
+  doi           = {10.1016/j.procs.2011.04.215},
+  publisher     = {Elsevier {BV}},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
